# CanvasVM

./: .gitignore  Cargo.toml  README.md  build.sh  generate_echo4  generate_echo_corridor  package.json
crates/canvas_codec/: Cargo.toml
crates/canvas_codec/src/: lib.rs
crates/canvas_codegen/: Cargo.toml
crates/canvas_codegen/src/: lib.rs  wasm.rs
crates/canvas_vm/: Cargo.toml
crates/canvas_vm/src/: bytecode.rs  compiler.rs  debugger.rs  error.rs  exits.rs  grid.rs  io.rs  lib.rs  ops.rs  vm.rs
crates/canvas_vm/tests/: debug_prime.rs  integration_tests.rs
crates/canvas_wasm/: Cargo.toml
crates/canvas_wasm/src/: lib.rs
crates/canvas_wasm/tests/: integration_tests.rs
docs/: canvas_wasm.js  canvas_wasm_bg.wasm  demo.html  index.html  script.js
docs/pkg/: canvas_wasm.d.ts  canvas_wasm.js  canvas_wasm_bg.wasm  canvas_wasm_bg.wasm.d.ts  package.json
tools/: analyze_image.rs  generate_echo4.rs  generate_echo4_linear.rs  generate_echo4_ordered.rs  generate_echo4_simple.rs  generate_echo4_v2.rs  generate_echo_corridor.rs  generate_proper_echo.rs
tools/fixtures/samples/: Piet.ppm  PrimeGenerator.ppm
tools/scripts/: build-wasm.sh
web/: index.html  style.css
